--- a/Q & A 1.15/Q & A 1.15/Storyboards/Base.lproj/Main.storyboard
+++ b/Q & A 1.15/Q & A 1.15/Storyboards/Base.lproj/Main.storyboard
@@ -82,6 +82,7 @@
                                 <connections>
                                     <outlet property="askedByLabel" destination="mXe-He-ago" id="Ksf-F0-vvD"/>
                                     <outlet property="questionLabel" destination="Phy-Hn-DNm" id="PXv-dt-6XH"/>
+                                    <segue destination="Nie-oQ-qcv" kind="show" identifier="answerSegue" id="AgC-GL-rWU"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -93,7 +94,7 @@
                     <navigationItem key="navigationItem" title="Q &amp; A" id="HYQ-qA-jR6">
                         <barButtonItem key="rightBarButtonItem" title="Ask Question" id="0St-3o-OGn">
                             <connections>
-                                <segue destination="wwn-IW-KIK" kind="show" id="TTw-Te-6Iy"/>
+                                <segue destination="wwn-IW-KIK" kind="show" identifier="askSegue" id="TTw-Te-6Iy"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -122,7 +123,6 @@
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="H7w-ac-Iod" secondAttribute="height" multiplier="3/1" id="hhl-vX-Qwd"/>
                                 </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -152,7 +152,64 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GkL-5T-ww0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1978" y="170"/>
+            <point key="canvasLocation" x="2065" y="-151"/>
+        </scene>
+        <!--Answer View Controller-->
+        <scene sceneID="FpI-Os-85f">
+            <objects>
+                <viewController id="Nie-oQ-qcv" customClass="AnswerViewController" customModule="Q___A_1_15" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="an8-tk-jxj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="djV-GO-JB8">
+                                <rect key="frame" x="8" y="116" width="359" height="269.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of person asking question" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fLR-OH-br8">
+                                        <rect key="frame" x="0.0" y="0.0" width="359" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4XU-7i-BQx">
+                                        <rect key="frame" x="0.0" y="28.5" width="359" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BTr-Z2-Shu">
+                                        <rect key="frame" x="0.0" y="57" width="359" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UZF-S4-akT">
+                                        <rect key="frame" x="0.0" y="95" width="359" height="174.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="djV-GO-JB8" secondAttribute="height" multiplier="4/3" id="nfN-qK-SWh"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="djV-GO-JB8" firstAttribute="top" secondItem="zKy-UX-v1W" secondAttribute="top" id="7xA-1G-qma"/>
+                            <constraint firstItem="djV-GO-JB8" firstAttribute="leading" secondItem="zKy-UX-v1W" secondAttribute="leading" constant="8" id="gn8-B2-szH"/>
+                            <constraint firstItem="zKy-UX-v1W" firstAttribute="trailing" secondItem="djV-GO-JB8" secondAttribute="trailing" constant="8" id="y09-g1-7Si"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="zKy-UX-v1W"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="vRF-4R-t5T">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="g2M-Kg-v2z"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8uZ-Hr-3na" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2066" y="640"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="JNJ-Gi-KBc">
