--- a/Q-And-A/Q-And-A/Base.lproj/Main.storyboard
+++ b/Q-And-A/Q-And-A/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="130" id="t6h-p7-ulM" customClass="QuestionTableViewCell" customModule="Q_And_A" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="questioncell" rowHeight="130" id="t6h-p7-ulM" customClass="QuestionTableViewCell" customModule="Q_And_A" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="130"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="t6h-p7-ulM" id="0p7-N4-Y05">
@@ -48,13 +49,13 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J8h-vH-0vJ">
                                                     <rect key="frame" x="0.0" y="40.666666666666657" width="398" height="32.333333333333343"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Asked by: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BaK-76-JMX">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="255" verticalHuggingPriority="251" text="Asked by: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BaK-76-JMX">
                                                             <rect key="frame" x="0.0" y="0.0" width="81.333333333333329" height="32.333333333333336"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rp4-fc-sxQ">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rp4-fc-sxQ">
                                                             <rect key="frame" x="81.333333333333343" y="0.0" width="316.66666666666663" height="32.333333333333336"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
@@ -90,12 +91,69 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Q&amp;A" id="6dz-xz-LB7">
-                        <barButtonItem key="rightBarButtonItem" title="Ask Question" id="6Hj-HA-EKy"/>
+                        <barButtonItem key="rightBarButtonItem" title="Ask Question" id="6Hj-HA-EKy">
+                            <connections>
+                                <action selector="askQuestionButtonTapped:" destination="18a-3U-Pap" id="fZW-5L-PP3"/>
+                                <segue destination="sEF-Ua-aA7" kind="show" identifier="askSegue" id="iCL-Bv-TI2"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E6n-db-vFD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="995.65217391304361" y="-45.535714285714285"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="wGX-nJ-3JJ">
+            <objects>
+                <viewController title="Title" id="sEF-Ua-aA7" customClass="AskQuestionViewController" customModule="Q_And_A" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WTm-Lo-OFD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7B9-6b-hPj">
+                                <rect key="frame" x="0.0" y="156" width="414" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="x7X-dE-fLY">
+                                <rect key="frame" x="0.0" y="194" width="414" height="276"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" secondItem="WTm-Lo-OFD" secondAttribute="height" multiplier="1/3" priority="100" placeholder="YES" id="xqq-rb-n7R"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="x7X-dE-fLY" firstAttribute="leading" secondItem="vAE-Mu-bby" secondAttribute="leading" id="EKh-ow-itV"/>
+                            <constraint firstItem="vAE-Mu-bby" firstAttribute="trailing" secondItem="7B9-6b-hPj" secondAttribute="trailing" id="Soc-jL-W6r"/>
+                            <constraint firstItem="7B9-6b-hPj" firstAttribute="leading" secondItem="vAE-Mu-bby" secondAttribute="leading" id="bff-J3-wdR"/>
+                            <constraint firstItem="7B9-6b-hPj" firstAttribute="top" secondItem="vAE-Mu-bby" secondAttribute="top" constant="16" id="cVs-AC-Hua"/>
+                            <constraint firstItem="x7X-dE-fLY" firstAttribute="top" secondItem="7B9-6b-hPj" secondAttribute="bottom" constant="8" id="kdR-gp-Teo"/>
+                            <constraint firstItem="vAE-Mu-bby" firstAttribute="trailing" secondItem="x7X-dE-fLY" secondAttribute="trailing" id="w6N-id-JMc"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="vAE-Mu-bby"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="i5l-ZT-5Jb">
+                        <barButtonItem key="rightBarButtonItem" title="Submit Question" id="GNS-Dh-qfO">
+                            <connections>
+                                <action selector="submitButton:" destination="sEF-Ua-aA7" id="Htj-N4-KhY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="textField" destination="7B9-6b-hPj" id="PYL-15-SS3"/>
+                        <outlet property="textView" destination="x7X-dE-fLY" id="FcY-No-Kaj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J4Q-Bq-scX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1701" y="-46"/>
         </scene>
         <!--Q&A-->
         <scene sceneID="Ktf-c4-Cos">
